Fixed header close on mobile nav-clicks

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,6 @@
   color: var(--color-text-main);
   overflow-x: hidden;
 }
+p {
+  padding: 0 6px;
+}
